2016-09-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Initialize fillcolor.

2016-09-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (set_plot_with_palette): When checking for plot elements 
	that refer to palette coloring, go through the list of objects also.

2016-09-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c docs/gnuplot.doc:  Ignore "set termopt {dashed|solid}".
	Remove use of this option from the manual.

2016-09-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph):  Fix a GDI resource leak which is
	only important when opening and closing a massive number of different
	graph windows.

2016-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (setup_3d_box_corners):  2016-09-06 revision to which
	plot edges have tic labels attached should not have been applied to
	"set view map" mode.

2016-09-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt (HAVE_ERF, HAVE_ERFC, HAVE_STDBOOL_H, isnan
	EAM_OBJECTS):  Version dependent macros to enable compilation
	with at least VS2012 or newer.

	* src/win/wgnuplib.rc:  Change (nominal) font size of most dialogs to
	8pt in order to match Windows default settings.

	* src/win/wgraph.c src/win/wgdiplus.cpp (W_hypertext):  Use the
	encoding which was active while plotting (not the current one) to
	display hypertext.

	* src/win/wgdiplus.cpp:  Fix a resource and memory leak.

	* src/win/wpause.c:  Use default GUI font (not the archaic system font).
	Match the size of the dialog box to the actual length of the message.

	* src/win/wtext.c (UpdateScrollBars):  The size of the scroll bar
	thumb reflects the length or width of the scrollable area.

	* src/win/wtext.c:  Ctrl-C copies to clipboard if there's selected text
	or sets the Ctrl-C (break) flag otherwise.

	* src/win/wgraph.c src/win/wmenu.c:  Use TB_ADDBUTTON instead of
	TB_LOADIMAGES to load standard icons as this somehow eliminates
	a resource leak.
